y.output

state 0
	$accept: .input $end 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 3
	searchParts  goto 2
	input  goto 1

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  searchParts.    (1)

	.  reduce 1 (src line 30)


state 3
	searchParts:  searchLogicPart.    (2)
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 

	tNOT  shift 13
	tOR  shift 12
	tAND  shift 11
	.  reduce 2 (src line 36)


state 4
	searchLogicPart:  searchBase.    (3)

	.  reduce 3 (src line 42)


state 5
	searchLogicPart:  tLEFTBRACKET.searchLogicPart tRIGHTBRACKET 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 14

state 6
	searchLogicPart:  tNOT.searchBase 

	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	.  error

	baseCondition  goto 7
	searchBase  goto 15

state 7
	searchBase:  baseCondition.    (9)

	.  reduce 9 (src line 67)


state 8
	searchBase:  tSTRING.tCOLON tLEFTBRACKET searchLogicPart tRIGHTBRACKET 
	searchBase:  tSTRING.tCOLON searchRange 
	baseCondition:  tSTRING.    (18)
	baseCondition:  tSTRING.tSTRING 

	tSTRING  shift 17
	tCOLON  shift 16
	.  reduce 18 (src line 118)


state 9
	baseCondition:  tPHRASE.    (20)
	baseCondition:  tPHRASE.tPHRASE 

	tPHRASE  shift 18
	.  reduce 20 (src line 126)


state 10
	baseCondition:  tNUMBER.    (22)

	.  reduce 22 (src line 134)


state 11
	searchLogicPart:  searchLogicPart tAND.searchLogicPart 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 19

state 12
	searchLogicPart:  searchLogicPart tOR.searchLogicPart 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 20

state 13
	searchLogicPart:  searchLogicPart tNOT.searchLogicPart 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 21

state 14
	searchLogicPart:  tLEFTBRACKET searchLogicPart.tRIGHTBRACKET 
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 

	tNOT  shift 13
	tOR  shift 12
	tAND  shift 11
	tRIGHTBRACKET  shift 22
	.  error


state 15
	searchLogicPart:  tNOT searchBase.    (7)

	.  reduce 7 (src line 58)


state 16
	searchBase:  tSTRING tCOLON.tLEFTBRACKET searchLogicPart tRIGHTBRACKET 
	searchBase:  tSTRING tCOLON.searchRange 

	tLEFTBRACKET  shift 23
	tLEFTRANGE  shift 25
	.  error

	searchRange  goto 24

state 17
	baseCondition:  tSTRING tSTRING.    (19)

	.  reduce 19 (src line 122)


state 18
	baseCondition:  tPHRASE tPHRASE.    (21)

	.  reduce 21 (src line 130)


state 19
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart tAND searchLogicPart.    (5)
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 

	.  reduce 5 (src line 50)


state 20
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart tOR searchLogicPart.    (6)
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 

	tAND  shift 11
	.  reduce 6 (src line 54)


state 21
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 
	searchLogicPart:  searchLogicPart tNOT searchLogicPart.    (8)

	tOR  shift 12
	tAND  shift 11
	.  reduce 8 (src line 62)


state 22
	searchLogicPart:  tLEFTBRACKET searchLogicPart tRIGHTBRACKET.    (4)

	.  reduce 4 (src line 46)


state 23
	searchBase:  tSTRING tCOLON tLEFTBRACKET.searchLogicPart tRIGHTBRACKET 

	tNOT  shift 6
	tSTRING  shift 8
	tPHRASE  shift 9
	tNUMBER  shift 10
	tLEFTBRACKET  shift 5
	.  error

	baseCondition  goto 7
	searchBase  goto 4
	searchLogicPart  goto 26

state 24
	searchBase:  tSTRING tCOLON searchRange.    (11)

	.  reduce 11 (src line 77)


state 25
	searchRange:  tLEFTRANGE.tSTRING tRIGHTRANGE 
	searchRange:  tLEFTRANGE.tTO tSTRING tRIGHTRANGE 
	searchRange:  tLEFTRANGE.tSTRING tTO tSTRING tRIGHTRANGE 
	searchRange:  tLEFTRANGE.tNUMBER tRIGHTRANGE 
	searchRange:  tLEFTRANGE.tTO tNUMBER tRIGHTRANGE 
	searchRange:  tLEFTRANGE.tNUMBER tTO tNUMBER tRIGHTRANGE 

	tSTRING  shift 27
	tNUMBER  shift 29
	tTO  shift 28
	.  error


state 26
	searchLogicPart:  searchLogicPart.tAND searchLogicPart 
	searchLogicPart:  searchLogicPart.tOR searchLogicPart 
	searchLogicPart:  searchLogicPart.tNOT searchLogicPart 
	searchBase:  tSTRING tCOLON tLEFTBRACKET searchLogicPart.tRIGHTBRACKET 

	tNOT  shift 13
	tOR  shift 12
	tAND  shift 11
	tRIGHTBRACKET  shift 30
	.  error


state 27
	searchRange:  tLEFTRANGE tSTRING.tRIGHTRANGE 
	searchRange:  tLEFTRANGE tSTRING.tTO tSTRING tRIGHTRANGE 

	tTO  shift 32
	tRIGHTRANGE  shift 31
	.  error


state 28
	searchRange:  tLEFTRANGE tTO.tSTRING tRIGHTRANGE 
	searchRange:  tLEFTRANGE tTO.tNUMBER tRIGHTRANGE 

	tSTRING  shift 33
	tNUMBER  shift 34
	.  error


state 29
	searchRange:  tLEFTRANGE tNUMBER.tRIGHTRANGE 
	searchRange:  tLEFTRANGE tNUMBER.tTO tNUMBER tRIGHTRANGE 

	tTO  shift 36
	tRIGHTRANGE  shift 35
	.  error


state 30
	searchBase:  tSTRING tCOLON tLEFTBRACKET searchLogicPart tRIGHTBRACKET.    (10)

	.  reduce 10 (src line 71)


state 31
	searchRange:  tLEFTRANGE tSTRING tRIGHTRANGE.    (12)

	.  reduce 12 (src line 85)


state 32
	searchRange:  tLEFTRANGE tSTRING tTO.tSTRING tRIGHTRANGE 

	tSTRING  shift 37
	.  error


state 33
	searchRange:  tLEFTRANGE tTO tSTRING.tRIGHTRANGE 

	tRIGHTRANGE  shift 38
	.  error


state 34
	searchRange:  tLEFTRANGE tTO tNUMBER.tRIGHTRANGE 

	tRIGHTRANGE  shift 39
	.  error


state 35
	searchRange:  tLEFTRANGE tNUMBER tRIGHTRANGE.    (15)

	.  reduce 15 (src line 101)


state 36
	searchRange:  tLEFTRANGE tNUMBER tTO.tNUMBER tRIGHTRANGE 

	tNUMBER  shift 40
	.  error


state 37
	searchRange:  tLEFTRANGE tSTRING tTO tSTRING.tRIGHTRANGE 

	tRIGHTRANGE  shift 41
	.  error


state 38
	searchRange:  tLEFTRANGE tTO tSTRING tRIGHTRANGE.    (13)

	.  reduce 13 (src line 90)


state 39
	searchRange:  tLEFTRANGE tTO tNUMBER tRIGHTRANGE.    (16)

	.  reduce 16 (src line 105)


state 40
	searchRange:  tLEFTRANGE tNUMBER tTO tNUMBER.tRIGHTRANGE 

	tRIGHTRANGE  shift 42
	.  error


state 41
	searchRange:  tLEFTRANGE tSTRING tTO tSTRING tRIGHTRANGE.    (14)

	.  reduce 14 (src line 95)


state 42
	searchRange:  tLEFTRANGE tNUMBER tTO tNUMBER tRIGHTRANGE.    (17)

	.  reduce 17 (src line 110)


15 terminals, 7 nonterminals
23 grammar rules, 43/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
56 working sets used
memory: parser 26/240000
10 extra closures
67 shift entries, 1 exceptions
12 goto entries
11 entries saved by goto default
Optimizer space used: output 55/240000
55 table entries, 1 zero
maximum spread: 15, maximum offset: 23
